Add id to new <li> item.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <li id="no-results">
                         No results
                     </li>
-                    <li>
+                    <li id="frontend-developer">
                         Frontend developer
                     </li>
                 </ul>
